--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Construct by Pixelarity
-	pixelarity.com @pixelarity
-	License: pixelarity.com/license
--->
 <html>
 	<head>
 		<title>SharksDatabase</title>
@@ -16,7 +11,7 @@
 	<body>
 	    
 	    
-	    			<!----	<section id="one" class="special">
+	    			<!---	<section id="one" class="special">
 							<ul class="icons big series">
 								<li class="icon fa-github"></li>
 								<li class="icon fa-code"></li>
